--- a/CSS/slyles.css
+++ b/CSS/slyles.css
@@ -4,8 +4,8 @@ a {
 .webstudio-logo, .webstudio-logo-blue{
     margin-left: 215px;
     margin-top: 25px;
-    width: 145px;
-    height: 31px;
+       width: 145px;
+       height: 31px;
     color: #2196F3;
     text-decoration: none;
 }
@@ -17,3 +17,6 @@ li
         list-style: none;
         display : inline-block;
     }
+    body {
+        color: black;
+      }
