--- a/CSS/slyles.css
+++ b/CSS/slyles.css
@@ -15,18 +15,18 @@
   --secondary-bg-color: #2f303a;
 }
 body {
-  font-family: 'roboto', 'sans-serif';
+  font-family: "roboto", "sans-serif";
   background-color: var(--main-bg-color);
   color: var(--title-text-color);
 }
 /* лого компании */
 .text-logo {
-      color: var(--accent-color);
+  color: var(--accent-color);
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
-    text-decoration: none;
+  text-decoration: none;
 }
 .black-color {
   color: var(--title-text-color);
@@ -37,9 +37,9 @@ body {
 
 /* навигация */
 .list {
-    list-style: none;
-    display: inline-block;
- }
+  list-style: none;
+  display: inline-block;
+}
 .navigate a {
   color: var(--title-text-color);
   font-weight: 500;
@@ -72,93 +72,93 @@ body {
   color: var(--accent-color);
 }
 .button {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   color: var(--title-text-color);
-  background-color: var(--first-bg-color)
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.87;
-  }
+  background-color: var(--first-bg-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.87;
+  cursor: pointer;
+}
 .button:hover {
   color: var(--first-bg-color);
   background-color: var(--accent-color);
   text-decoration: underline;
 }
 .button:focus {
-    background-color: var(--accent-color);
+  background-color: var(--accent-color);
 }
 /* секция галереи */
-.section-galery  h2{  
-font-weight: 700;
-font-size: 18px;
-line-height: 2;
-letter-spacing: 0.06em;
+.section-exapmles h2 {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 }
-.section-galery p{
-  color:var(--primary-text-color);
+.section-exapmles p {
+  color: var(--primary-text-color);
   font-weight: 400;
-font-size: 16px;
-line-height: 1.875;
-letter-spacing: 0.03em;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.03em;
 }
 /* футер */
 .footer {
-      background-color: var(--secondary-bg-color);
-      color: var(--white-text-color);
-font-weight: 400;
-font-size: 14px;
+  background-color: var(--secondary-bg-color);
+  color: var(--white-text-color);
+  font-weight: 400;
+  font-size: 14px;
 }
-.address{
+.address {
   font-style: normal;
   line-height: 1.7;
 }
 /* первая страница */
-.main-section, .main-section > h1{
-       background-color: var(--secondary-bg-color);
-       color: var(--white-text-color);
+.section-main,
+.section-main > h1 {
+  background-color: var(--secondary-bg-color);
+  color: var(--white-text-color);
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
-      text-transform: uppercase;
-      text-align: center; 
+  text-transform: uppercase;
+  text-align: center;
 }
-.section-main button{
-    color:var(--white-text-color);
-    background-color: var(--accent-color);
-      line-height: 1.875;
+.section-main button {
+  color: var(--white-text-color);
+  background-color: var(--accent-color);
+  line-height: 1.875;
   text-decoration: none;
-   }
+}
 
-.section-difference  h3 {
+.section-difference h3 {
   color: var(--title-text-color);
-      line-height: 1.14;
-      font-size: 14px;
-      font-weight: 700;
+  line-height: 1.14;
+  font-size: 14px;
+  font-weight: 700;
   text-transform: uppercase;
 }
-.section-difference  p {
+.section-difference p {
   color: var(--primary-text-color);
-    line-height: 1.73;
-    font-size: 14px;
-   }
-.section-header{
-font-weight: 700;
-font-size: 36px;
-line-height: 1.67;
+  line-height: 1.73;
+  font-size: 14px;
 }
-.section-team{
-  color:var(--title-text-color);
+.section-header {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.67;
+}
+.section-team {
+  color: var(--title-text-color);
   background-color: var(--first-bg-color);
-font-size: 16px;
-line-height: 1.19;
-
+  font-size: 16px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  text-align: center;
 }
-.section-team h3{
-font-weight: 500;
-letter-spacing: 0.03em;
+.section-team h3 {
+  font-weight: 500;
 }
-.section-team p{
-  color:var(--primary-text-color);
-font-weight: 400;
-letter-spacing: 0.03em;
+.section-team p {
+  color: var(--primary-text-color);
 }
